InstanceIdentifier consistency test + test polishing